fixed some majors

--- a/civic_engagement_merge.ipynb
+++ b/civic_engagement_merge.ipynb
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "id": "62841c26",
    "metadata": {},
    "outputs": [
@@ -740,7 +740,10 @@
     "    (r\"\\benv\\b|environmental\\s+sci\",           \"ENV\"),\n",
     "    (r\"\\bfre\\b|french\",                        \"FRE\"),\n",
     "    (r\"\\bgeo\\b|geolog|geograph\",               \"GEO\"),\n",
+    "    (r\"\\bgrs\\b|germanic\",                      \"GRS\"),   # Germanic Studies\n",
     "    (r\"\\bhis\\b|histor\",                        \"HIS\"),\n",
+    "    (r\"\\bhmn\\b|humanities\",                    \"HMN\"),   # Humanities\n",
+    "    (r\"\\bhps\\b|hispanic\\s+stud|hispanic\",      \"HPS\"),   # Hispanic Studies\n",
     "    (r\"\\bids\\b|interdisciplin\",                \"IDS\"),\n",
     "    (r\"\\bint\\b|international\",                 \"INT\"),\n",
     "    (r\"\\bmat\\b|math\",                          \"MAT\"),\n",
@@ -883,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "id": "d43f557c",
    "metadata": {},
    "outputs": [
@@ -891,13 +894,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Entries with unmatched major text (16 rows):\n",
+      "Entries with unmatched major text (14 rows):\n",
       "survey_year                                                                                       Major_raw                   Major1               Major2\n",
       "       SP23                                                                         History, German Studies                      HIS OTHER:GERMAN_STUDIES\n",
       "       SP23                                                                                European Studies   OTHER:EUROPEAN_STUDIES                     \n",
-      "       SP23                                                                                     Humanities          OTHER:HUMANITIES                     \n",
       "       SP23                                                                              experimental psych OTHER:EXPERIMENTAL_PSYCH                     \n",
-      "       SP23                                                                    Hispanic Studies, Studio Art   OTHER:HISPANIC_STUDIES                  ART\n",
       "       SP23                                                                                    Lycanthropy         OTHER:LYCANTHROPY                     \n",
       "       SP23                                                                                           Psyc                OTHER:PSYC                     \n",
       "       SP24                                                                                            swim               OTHER:SWIM                     \n",
@@ -940,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "id": "c2e2112a",
    "metadata": {},
    "outputs": [
@@ -1015,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "id": "b6696bb4",
    "metadata": {},
    "outputs": [
@@ -1129,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "id": "cc1a5b20",
    "metadata": {},
    "outputs": [
@@ -1205,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "id": "8cd25a6b",
    "metadata": {},
    "outputs": [
@@ -1435,7 +1436,7 @@
        "19                   Course-credit participant number  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
