Final coding updates for the night

--- a/civic_engagement_merge.ipynb
+++ b/civic_engagement_merge.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "id": "92dd7872",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "id": "b7f1ca67",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 58,
    "id": "a8504870",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 59,
    "id": "f9e37bbb",
    "metadata": {},
    "outputs": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 60,
    "id": "bca74cb0",
    "metadata": {},
    "outputs": [
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 61,
    "id": "a88e7f5f",
    "metadata": {},
    "outputs": [
@@ -546,11 +546,13 @@
     "# Community reference (Q6)\n",
     "COMMUNITY_REF_MAP = {\n",
     "    \"The Chestertown community\": 1,\n",
+    "    \"The Chestertown or local community\": 1,\n",
+    "    \"Chestertown community\": 1,\n",
     "    \"The Washington College community\": 2,\n",
     "    \"The broader national community\": 3,\n",
-    "    \"Other (please specify)\": 4,\n",
-    "    \"Chestertown community\": 1,\n",
     "    \"National community\": 3,\n",
+    "    \"Other (please specify)\": 4,\n",
+    "    \"Somewhere else (please specify)\": 4,\n",
     "    \"Other\": 4,\n",
     "    \"Your home community\": 5,\n",
     "}\n",
@@ -688,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 62,
    "id": "62841c26",
    "metadata": {},
    "outputs": [
@@ -886,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 63,
    "id": "d43f557c",
    "metadata": {},
    "outputs": [
@@ -930,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 64,
    "id": "c2e2112a",
    "metadata": {},
    "outputs": [
@@ -1005,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 65,
    "id": "b6696bb4",
    "metadata": {},
    "outputs": [
@@ -1115,6 +1117,7 @@
     "## 9 · One-Hot Encode Multi-Select Responses\n",
     "\n",
     "Three survey questions allow respondents to select multiple options. We one-hot encode each into binary indicator columns:\n",
+    "- **`CE_define_open`** — 13 civic engagement definition items\n",
     "- **`Media_CE_activities`** — 7 social-media CE activities (near-duplicate labels across years are normalized by lowercasing and stripping trailing punctuation)\n",
     "- **`Local_news_which`** — 6 local news outlets\n",
     "\n",
@@ -1124,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 66,
    "id": "edd0405e",
    "metadata": {},
    "outputs": [
@@ -1132,6 +1135,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "CE_define_open one-hot preview:\n",
+      "survey_year                                                                                                                                                                                                                                                                                                                                                                                                                            CE_define_open  CEdef_voting  CEdef_volunteering  CEdef_talking_community  CEdef_activism  CEdef_political  CEdef_protesting  CEdef_teaching  CEdef_fundraising  CEdef_arts_culture  CEdef_community_business  CEdef_donations  CEdef_research  CEdef_service_learning\n",
+      "       SP23                                                                                                                                                                                                                                                                                                                                                                                                                                    Voting             1                   0                        0               0                0                 0               0                  0                   0                         0                0               0                       0\n",
+      "       SP23                                                                                                  Voting,Political engagement,Talking with people in the community,Fundraising,Volunteering or doing community service,Protesting or rallying,Activism or awareness raising activities,Participating in research with community members,Service-learning experiences with a class,Contributing to community businesses with a social cause             1                   1                        1               1                1                 1               0                  1                   0                         1                0               1                       1\n",
+      "       SP24                                                                                                                                                                                                                                                                                                                                                                                                                                        -9            -9                  -9                       -9              -9               -9                -9              -9                 -9                  -9                        -9               -9              -9                      -9\n",
+      "       SP24                                                                                                                                                                                                                                                                                                                          Voting,Political engagement,Activism or awareness raising activities,Attending community arts and culture events             1                   0                        0               1                1                 0               0                  0                   1                         0                0               0                       0\n",
+      "       SP25 Voting,Political engagement,Talking with people in the community,Teaching or mentorship,Fundraising,Making donations to charities,Volunteering or doing community service,Protesting or rallying,Activism or awareness raising activities,Attending community arts and culture events,Participating in research with community members,Service-learning experiences with a class,Contributing to community businesses with a social cause             1                   1                        1               1                1                 1               1                  1                   1                         1                1               1                       1\n",
+      "       SP25                                             Voting,Political engagement,Talking with people in the community,Teaching or mentorship,Fundraising,Making donations to charities,Volunteering or doing community service,Protesting or rallying,Activism or awareness raising activities,Participating in research with community members,Service-learning experiences with a class,Contributing to community businesses with a social cause             1                   1                        1               1                1                 1               1                  1                   0                         1                1               1                       1\n",
+      "\n",
       "Media_CE_activities one-hot preview:\n",
       "survey_year                                                                                                                                                                                                                                                                                            Media_CE_activities  Media_repost_events  Media_sign_petition  Media_follow_news  Media_follow_officials  Media_debate_opinions  Media_like_posts  Media_post_opinions\n",
       "       SP23                                                                                                                                                                                                                                                       Following accounts/pages that post about current events.                    0                    0                  1                       0                      0                 0                    0\n",
@@ -1162,6 +1174,22 @@
     "# ── Option → column-name maps ─────────────────────────────────────────────\n",
     "# Each entry: (substring to match in lowercased response, output column name)\n",
     "# Matching is case-insensitive substring; trailing periods stripped before matching.\n",
+    "\n",
+    "CE_DEFINE_OHE = [\n",
+    "    (\"voting\",                                            \"CEdef_voting\"),\n",
+    "    (\"volunteering or doing community service\",           \"CEdef_volunteering\"),\n",
+    "    (\"talking with people in the community\",              \"CEdef_talking_community\"),\n",
+    "    (\"activism or awareness raising\",                     \"CEdef_activism\"),\n",
+    "    (\"political engagement\",                              \"CEdef_political\"),\n",
+    "    (\"protesting or rallying\",                            \"CEdef_protesting\"),\n",
+    "    (\"teaching or mentorship\",                            \"CEdef_teaching\"),\n",
+    "    (\"fundraising\",                                       \"CEdef_fundraising\"),\n",
+    "    (\"attending community arts and culture\",              \"CEdef_arts_culture\"),\n",
+    "    (\"contributing to community businesses\",              \"CEdef_community_business\"),\n",
+    "    (\"making donations to charities\",                     \"CEdef_donations\"),\n",
+    "    (\"participating in research with community\",          \"CEdef_research\"),\n",
+    "    (\"service-learning experiences\",                      \"CEdef_service_learning\"),\n",
+    "]\n",
     "\n",
     "MEDIA_OHE = [\n",
     "    (\"reposting information\",                            \"Media_repost_events\"),\n",
@@ -1205,22 +1233,35 @@
     "\n",
     "# Apply to each year's filled DataFrame so columns are present before concat\n",
     "for year, df in filled.items():\n",
+    "    cedef_ohe = one_hot_multiselect(df[\"CE_define_open\"],      CE_DEFINE_OHE)\n",
     "    media_ohe = one_hot_multiselect(df[\"Media_CE_activities\"], MEDIA_OHE)\n",
     "    news_ohe  = one_hot_multiselect(df[\"Local_news_which\"],    NEWS_OHE)\n",
+    "    for col in cedef_ohe.columns:\n",
+    "        df[col] = cedef_ohe[col]\n",
     "    for col in media_ohe.columns:\n",
     "        df[col] = media_ohe[col]\n",
     "    for col in news_ohe.columns:\n",
     "        df[col] = news_ohe[col]\n",
     "\n",
-    "# Preview\n",
+    "# Preview CE_define_open OHE\n",
+    "cedef_ohe_cols = [s[1] for s in CE_DEFINE_OHE]\n",
+    "preview_cedef = pd.concat([\n",
+    "    filled[y][[\"survey_year\", \"CE_define_open\"] + cedef_ohe_cols].head(2)\n",
+    "    for y in FILE_MAP\n",
+    "])\n",
+    "print(\"CE_define_open one-hot preview:\")\n",
+    "print(preview_cedef.to_string(index=False))\n",
+    "\n",
+    "# Preview Media OHE\n",
     "ohe_cols = [s[1] for s in MEDIA_OHE]\n",
     "preview_ohe = pd.concat([\n",
     "    filled[y][[\"survey_year\", \"Media_CE_activities\"] + ohe_cols].head(3)\n",
     "    for y in FILE_MAP\n",
     "])\n",
-    "print(\"Media_CE_activities one-hot preview:\")\n",
+    "print(\"\\nMedia_CE_activities one-hot preview:\")\n",
     "print(preview_ohe.to_string(index=False))\n",
     "\n",
+    "# Preview News OHE\n",
     "news_ohe_cols = [s[1] for s in NEWS_OHE]\n",
     "preview_news = pd.concat([\n",
     "    filled[y][[\"survey_year\", \"Local_news_which\"] + news_ohe_cols].head(3)\n",
@@ -1242,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 67,
    "id": "cc1a5b20",
    "metadata": {},
    "outputs": [
@@ -1250,7 +1291,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Merged dataset shape: (839, 81)\n",
+      "Merged dataset shape: (839, 94)\n",
       "Years present: {'SP24': 328, 'SP25': 282, 'SP23': 229}\n",
       "\n",
       "✓ Saved: CE_longitudinal_merged.csv\n",
@@ -1318,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 68,
    "id": "8cd25a6b",
    "metadata": {},
    "outputs": [
@@ -1327,7 +1368,7 @@
      "output_type": "stream",
      "text": [
       "✓ Codebook saved: CE_longitudinal_codebook.xlsx\n",
-      "  81 variables documented\n"
+      "  94 variables documented\n"
      ]
     },
     {
@@ -1548,7 +1589,7 @@
        "19                   Course-credit participant number  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1643,6 +1684,20 @@
     "    \"Gender\":             (\"categorical\", \"1=Man, 2=Woman, 3=Non-binary, 4=Self-describe, 5=Prefer not\", \"Gender identity\"),\n",
     "    \"Race_ethnicity\":     (\"multi-select text\", \"Open response / multi-select\", \"Racial/ethnic identity\"),\n",
     "    \"Participant_code\":   (\"text\", \"Open response\", \"Course-credit participant number\"),\n",
+    "    # ── One-hot encoded: CE_define_open ──────────────────────────────────\n",
+    "    \"CEdef_voting\":            (\"binary OHE\", \"1=selected, 0=not selected, -9=missing\", \"CE definition: Voting\"),\n",
+    "    \"CEdef_volunteering\":      (\"binary OHE\", \"1=selected, 0=not selected, -9=missing\", \"CE definition: Volunteering or community service\"),\n",
+    "    \"CEdef_talking_community\": (\"binary OHE\", \"1=selected, 0=not selected, -9=missing\", \"CE definition: Talking with people in the community\"),\n",
+    "    \"CEdef_activism\":          (\"binary OHE\", \"1=selected, 0=not selected, -9=missing\", \"CE definition: Activism or awareness raising\"),\n",
+    "    \"CEdef_political\":         (\"binary OHE\", \"1=selected, 0=not selected, -9=missing\", \"CE definition: Political engagement\"),\n",
+    "    \"CEdef_protesting\":        (\"binary OHE\", \"1=selected, 0=not selected, -9=missing\", \"CE definition: Protesting or rallying\"),\n",
+    "    \"CEdef_teaching\":          (\"binary OHE\", \"1=selected, 0=not selected, -9=missing\", \"CE definition: Teaching or mentorship\"),\n",
+    "    \"CEdef_fundraising\":       (\"binary OHE\", \"1=selected, 0=not selected, -9=missing\", \"CE definition: Fundraising\"),\n",
+    "    \"CEdef_arts_culture\":      (\"binary OHE\", \"1=selected, 0=not selected, -9=missing\", \"CE definition: Attending community arts and culture events\"),\n",
+    "    \"CEdef_community_business\":(\"binary OHE\", \"1=selected, 0=not selected, -9=missing\", \"CE definition: Contributing to community businesses with a social cause\"),\n",
+    "    \"CEdef_donations\":         (\"binary OHE\", \"1=selected, 0=not selected, -9=missing\", \"CE definition: Making donations to charities\"),\n",
+    "    \"CEdef_research\":          (\"binary OHE\", \"1=selected, 0=not selected, -9=missing\", \"CE definition: Participating in research with community members\"),\n",
+    "    \"CEdef_service_learning\":  (\"binary OHE\", \"1=selected, 0=not selected, -9=missing\", \"CE definition: Service-learning experiences with a class\"),\n",
     "    # ── One-hot encoded: Media_CE_activities ──────────────────────────────\n",
     "    \"Media_repost_events\":    (\"binary OHE\", \"1=selected, 0=not selected, -9=missing\", \"Media CE: Reposting information about current events\"),\n",
     "    \"Media_sign_petition\":    (\"binary OHE\", \"1=selected, 0=not selected, -9=missing\", \"Media CE: Signing online petitions\"),\n",
